<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_logout"
        app:showAsAction="always"
        android:icon="@drawable/ic_power_settings_new_white_24dp"
        android:title="@string/profile_logout"/>
</menu>