<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/detail_delete_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_users"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:title="@string/users_title"
        app:showAsAction="always" />
</menu>