...
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shop_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/view_list_shop" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
...
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/shop_create_shop_title" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/create_shop_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_add_shopping_cart_white_24dp"
...
