...
        android:layout_alignParentRight="true"
        android:layout_below="@id/toolbar_layout"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@id/item_image_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop_create_name_hint"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
...
